# vibe_of_a_room

./: README.md  pyproject.toml
vibe_of_a_room/: __init__.py  jacobian.py  main.py  other.py  torch_impl.py  torch_other.py
