[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vibe-of-a-room"
version = "0.1.0"
description = ""
authors = [ "Alok Singh <alokbeniwal@gmail.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "vibe_of_a_room"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
torch = "^2.0.0"
torchaudio = "^2.0.1"
matplotlib = "^3.7.1"
pyqt6 = "^6.4.2"
pyqt5-sip = "^12.11.1"
soundfile = "^0.12.1"
jaxlib = "^0.4.7"
jax = "^0.4.8"

[tool.poetry.dependencies.scipy]
python = ">3.10,<3.12"
version = "^1"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
black = "^23.3.0"

